	     consequence, we have downgraded the MPT Fusion driver in the RHEL4
	     kernel from 3.02.99.00 to 3.02.73 until this problem is fixed.

Severity   : normal
Frequency  : PPC/PPC64 only
Bugzilla   : 14845
Description: conflicts between asm-ppc64/types.h and lustre_types.h
Details    : fix duplicated definitions between asm-ppc64/types.h and
	     lustre_types.h on PPC.

Severity   : normal
Bugzilla   : 13805
Description: data checksumming impacts single node performance
Details    : add support for several checksum algorithms. Currently, CRC32 and
	     Adler-32 are supported. The checksum type can be changed on the fly
	     through /proc/fs/lustre/osc/*/checksum_type.

Severity   : normal
Bugzilla   : 14648
Description: use adler32 for page checksums
Details    : when available, use the Adler-32 algorithm instead of CRC32 for
	     page checksums.

Severity   : normal
Bugzilla   : 14864
Description: better handle error messages in extents code

--------------------------------------------------------------------------------

2007-12-07         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.4
       * Support for kernels:
        2.6.5-7.286 (SLES 9),
        2.6.9-55.0.9.EL (RHEL 4),
        2.6.16.53-0.8 (SLES 10),
        2.6.18-8.1.14.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : major
Frequency  : occasional
Bugzilla   : 13917
Description: MDS hang or stay in waiting lock
Details    : If client receive lock with CBPENDING flag ldlm need send lock